[tool.poetry]
name = "350-judge"
version = "0.1.0"
description = ""
authors = ["bogay <pojay11523@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
